--- a/Desafio nas alturas.csproj
+++ b/Desafio nas alturas.csproj
@@ -284,12 +284,14 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Aviao.cs" />
     <Compile Include="Assets\Scripts\Carrossel.cs" />
+    <Compile Include="Assets\Scripts\ControleDeDificuldade.cs" />
     <Compile Include="Assets\Scripts\Diretor.cs" />
     <Compile Include="Assets\Scripts\GeradorDeObstaculos.cs" />
     <Compile Include="Assets\Scripts\InterfaceGameOver.cs" />
     <Compile Include="Assets\Scripts\MaoPiscando.cs" />
     <Compile Include="Assets\Scripts\Obstaculo.cs" />
     <Compile Include="Assets\Scripts\Pontuacao.cs" />
+    <Compile Include="Assets\Scripts\VariavelCompartilhadaFloat.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
